fix(mobile): Got rid of Go button on mobile navigation bar

--- a/frontend/src/components/Navigation/Navigation.scss
+++ b/frontend/src/components/Navigation/Navigation.scss
@@ -609,8 +609,7 @@
       }
 
       .channel-go-button {
-        font-size: 0.75rem;
-        padding: 2px 4px;
+        display: none;
       }
 
       .search-dropdown {
